database, auth service, discord webhook

--- a/Source/Startup/Startup.csproj
+++ b/Source/Startup/Startup.csproj
@@ -16,6 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Nyaa.Web\Nyaa.Web.csproj" />
       <ProjectReference Include="..\Source.ApiService\Source.ApiService.csproj" />
       <ProjectReference Include="..\Source.Web\Source.Web.csproj" />
     </ItemGroup>
