--- a/Source/Nyaa.Web/appsettings.json
+++ b/Source/Nyaa.Web/appsettings.json
@@ -9,4 +9,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=anime.db"
   }
+,
+  "Discord": {
+    "AuthNotifyChannelWebhook" : "hook url"
+  }
 }
